feat: split into multiple modules